@@ -16,10 +16,10 @@
 #++
 
 require 'rubygems'
-gem( 'logback', '>= 0.9.14' )
+gem( 'rjack-logback', '>= 0.9.17.1' )
 
-require 'logback'
-Logback.root.level = Logback::DEBUG
+require 'rjack-logback'
+Logback.config_console( :level => Logback::DEBUG )
 
 require 'test/unit'
 
